--- a/style.css
+++ b/style.css
@@ -3,3 +3,38 @@
     padding: 0;
     font-family: sans-serif;
 }
+.header {
+    min-height: 100vh;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+nav {
+    display: flex;
+    padding: 0% 0%;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fafafa;
+}
+#header-img {
+    margin: 0 30px;
+    width: 120px;
+}
+.nav-links {
+    text-align: right;
+    flex: 1;
+}
+nav ul li {
+    list-style: none;
+    display: inline-block;
+    margin-right: 30px;
+    padding: 16px;
+    position: relative;
+    background: linear-gradient(rgb(196, 114, 114),rgb(78, 139, 78));
+    cursor: pointer;
+}
+nav ul li a {
+    text-decoration: none;
+    color: black;
+}
