--- a/style.css
+++ b/style.css
@@ -95,3 +95,34 @@ nav ul li a {
     margin-top: 10px;
     font-size: 19px;
 }
+
+
+/* Menu section */
+.menu {
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+}
+.menu h1 {
+    font-size: 50px;
+    font-weight: 600;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.row {
+    padding: 0 60px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+.menu-item {
+    flex-basis: 30%;
+    text-align: left;
+}
+.menu-item h3 {
+    margin-top: 10px;
+}
+.menu-item img {
+    width: 100%;
+    border-radius: 10px;
+}
