--- a/style.css
+++ b/style.css
@@ -129,16 +129,37 @@ nav ul li a {
 
 /* List Restaurants */
 .restaurant-img {
-    width: 45%;
-    height: 80%;
-    position: relative;
-    bottom: 0;
-    right: 100px;
+    margin-top: 100px;
 }
-.restaurant-img div {
-    height: 100%;
-    position: relative;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
+.res-total {
+    font-size: 1.8rem;
+    line-height: 120%;
+    font-weight: 600;
+    margin-top: 10px;
 }
+.res-total p {
+    font-size: 10px;
+}
+.res-img {
+    margin-left: 230px;
+    width: 360px;
+}
+.top-img {
+    display: flex;
+    gap: 5px;
+    align-items: baseline;
+    margin-bottom: 2px;
+}
+.bottom-img {
+    display: flex;
+    gap: 5px;
+    vertical-align: text-bottom;
+}
+.row-res {
+    padding: 0 60px;
+    margin-top: 20px;
+    display: flex;
+
+    align-items: center;
+}
+
